[project]
name = "livekit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "diffusers>=0.32.2",
    "huggingface-hub[cli]>=0.29.3",
    "ipython>=8.34.0",
    "livekit>=0.21.3",
    "livekit-api>=0.8.2",
    "numpy>=2.2.4",
    "nvitop>=1.4.2",
    "opencv-python>=4.11.0.86",
    "transformers>=4.49.0",
]
