[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.34.0",
    "livekit>=0.18.3",
    "livekit-api>=0.8.2",
    "opencv-python>=4.11.0.86",
    "streamdiffusion[tensorrt]>=0.1.1",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "xformers>=0.0.22.post7",
]
